@@ -1,3 +1,8 @@
+2008-03-17  Sven Herzberg  <sven@imendio.com>
+
+      * gconf-2.m4.in: use AC_HELP_STRING for help strings (so they get
+      proper line breaks and consistent indentation)
+
 2008-03-19  Vincent Untz  <vuntz@gnome.org>
 
 	Unblock signals when starting gconfd, since we might inherit some
